<resources>

    <string name="app_name">Expenses App</string>
    <string name="sign_up_text">Are you new? Sign-up!</string>
    <string name="login_text">If not, just log-in to your account.</string>
    <string name="pass">Password *</string>
    <string name="name">Username *</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign-up</string>
    <string name="personal_info">Personal Info</string>
    <string name="done_button">done button</string>
    <string name="button_to_login">button to login</string>
    <string name="button_to_add_an_account">button to add an account</string>
    <string name="sign_up_alert">You have already signed up. Please login.</string>
    <string name="login_alert">You have not signed up yet. Please sign up.</string>
    <string name="sign_up_positive_alert">Login</string>
    <string name="login_positive_alert">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_credentials">Username and/or Password are incorrect</string>
    <string name="try_again">Try Again</string>
    <string name="go_to_main">Go Back</string>
    <string name="missing_fields">Missing fields</string>
    <string name="income">Income *</string>
    <string name="full_name">Full Name *</string>
    <string name="title_activity_display">Display</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_to_go_back">button_to_go_back</string>
    <string name="the_field_must_be_filled">*: Mandatory fields</string>
    <string name="file_failure">Failed to create file.. Please try again.</string>
    <string name="add_new_element">Adding a new element</string>
    <string name="OK">OK</string>
    <string name="new_expense">Add a new expense.</string>
    <string name="greetings">Greetings</string>
    <string name="wage">Your wage is:</string>
    <string name="remaining">Your remaining for this month is:</string>
    <string name="per_day">Your remaining is divided per day as:</string>
    <string name="expenses">Your current expenses are:</string>
    <string name="savings">Your current savings are:</string>
    <string name="intro">Welcome</string>
    <string name="force_sign_up">force sign up</string>
    <string name="add_element">Add a new element</string>
    <string name="new_expense_option">New expense</string>
    <string name="add_amount">Please add amount of money.</string>
    <string name="set_date_or_default">Date (leave blank to select NOW)</string>
    <string name="new_saving">New saving</string>
    <string name="radioButtonExpense">Expense</string>
    <string name="radioButtonSaving">Saving</string>
    <string name="title_activity_display_tabbed">DisplayTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
