<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity"
        android:background="@android:color/holo_green_dark">

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:textColorHint="@android:color/black"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textNewUsername"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintHorizontal_bias="0.502"

    />

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass"
            android:textColorHint="@android:color/black"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textNewPassword"
            android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/textNewUsername"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"

            app:layout_constraintBottom_toTopOf="@+id/add_button"/>

    <ImageButton

            android:layout_width="87dp"
            android:layout_height="83dp"
            app:srcCompat="@drawable/plus"
            android:background="@android:color/holo_green_dark"
            android:id="@+id/add_button"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.914"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.916"
            android:contentDescription="@string/button_to_add_an_account"

    />

    <TextView

            android:text="@string/sign_up"
            android:layout_width="56dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textViewLogin"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/textNewUsername"

    />

    <TextView

            android:text="@string/the_field_must_be_filled"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_height="37dp"
            android:layout_width="177dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textNewPassword"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintVertical_bias="0.19"

    />

</android.support.constraint.ConstraintLayout>