<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PersonalInfoActivity"
        android:background="@android:color/holo_green_dark">

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/full_name"
            android:textColor="@android:color/black"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/full_name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="92dp"
            app:layout_constraintHorizontal_bias="0.502"

            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/income"/>

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:hint="@string/income"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/income"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="216dp"

    />

    <ImageButton

            android:layout_width="73dp"
            android:layout_height="67dp"
            app:srcCompat="@drawable/done_button"
            android:id="@+id/button_done"
            android:background="@android:color/holo_green_dark"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            app:layout_constraintVertical_bias="0.916"
            style="@style/Widget.AppCompat.ImageButton"
            android:contentDescription="@string/done_button"

    />

    <ImageButton

            android:layout_width="56dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/back_button"
            android:id="@+id/back_button"
            android:background="@android:color/holo_green_dark"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            app:layout_constraintEnd_toStartOf="@+id/button_done"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/button_to_go_back"

    />

    <TextView

            android:text="@string/the_field_must_be_filled"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_height="37dp"
            android:layout_width="177dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/income"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintVertical_bias="0.19"

    />

</android.support.constraint.ConstraintLayout>