<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@android:color/holo_green_dark">

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/text_password"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="228dp"
            app:layout_constraintHorizontal_bias="0.402"
            android:hint="@string/pass"
            android:textColorHint="@android:color/black"

    />

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/text_username"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/text_password"
            app:layout_constraintHorizontal_bias="0.402"
            app:layout_constraintVertical_bias="0.622"
            android:hint="@string/name"
            android:textColorHint="@android:color/black"

    />

    <ImageButton

            android:layout_width="56dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/done_button"
            android:id="@+id/button_done"
            android:background="@android:color/holo_green_dark"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            app:layout_constraintVertical_bias="0.916"
            style="@style/Widget.AppCompat.ImageButton"
            android:contentDescription="@string/done_button"

    />

    <ImageButton

            android:layout_width="56dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/back_button"
            android:id="@+id/back_button"
            android:background="@android:color/holo_green_dark"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            app:layout_constraintEnd_toStartOf="@+id/button_done"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/button_to_login"

    />

</android.support.constraint.ConstraintLayout>