<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@android:color/holo_blue_bright">

    <Button

            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_signUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.449"

    />

    <TextView

            android:text="@string/signUp_text"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="244dp"
            android:layout_height="39dp"
            android:id="@+id/text_signUp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/button_signUp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintVertical_bias="0.917"

    />

    <Button

            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="44dp"

    />

    <TextView

            android:text="@string/login_text"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="244dp"
            android:layout_height="39dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/text_login"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintHorizontal_bias="0.603"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button_signUp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintVertical_bias="0.881"

    />

</android.support.constraint.ConstraintLayout>